[gd_scene load_steps=2 format=3 uid="uid://c2t5ln2yyn2y5"]

[ext_resource type="Script" path="res://Prog122d.gd" id="1_etmr6"]

[node name="Prog122d" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_etmr6")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 50.0
offset_right = 995.0
offset_bottom = 423.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 484.0
offset_right = 314.0
offset_bottom = 606.0
text = "Show"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 459.0
offset_top = 481.0
offset_right = 673.0
offset_bottom = 603.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 481.0
offset_right = 1046.0
offset_bottom = 603.0
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
